fixed up indexings

--- a/Docs/UserGuide/tradedata/equityforward.tex
+++ b/Docs/UserGuide/tradedata/equityforward.tex
@@ -1,7 +1,7 @@
 \subsubsection{Equity Forward}
 
 The \lstinline!EquityForwardData!  node is the trade data container for the \emph{EquityForward} trade type.  Vanilla equity 
-forwards are supported. The structure of an example \lstinline!EquityForwardData! node for an equity option is shown in 
+forwards are supported. The structure of an example \lstinline!EquityForwardData! node for an equity forward is shown in 
 Listing \ref{lst:eqfwd_data}.
 
 \begin{listing}[H]
