--- a/Docs/UserGuide/tradecomponents/indexings.tex
+++ b/Docs/UserGuide/tradecomponents/indexings.tex
@@ -1,10 +1,10 @@
 \subsubsection{Indexings}
 \label{ss:indexings}
 
-This trade component can be used as an optional node within the LegData component to scale the notional of the coupons
+This trade component can be used as an optional node within the \lstinline!LegData! component to scale the notional of the coupons
 of a leg by one or several index prices. This feature is typically used within equity swaps with notional reset to align
 the notional of the funding leg with the one from the equity leg for all return periods. See \ref{ss:equity_swap} for
-the specific usage in equity swaps. Notice that typically it is sufficient to set the FromAssetLeg flag to true in the
+the specific usage in equity swaps. Notice that typically it is sufficient to set the \lstinline!FromAssetLeg! flag to \emph{true} in the
 \verb+Indexings+ node definition, i.e.
 
 \begin{minted}[fontsize=\footnotesize]{xml}
@@ -35,7 +35,7 @@ be used in combination with the following leg types:
 \end{itemize}
 
 If specified the notional of the single coupons in the leg is scaled by one or several index prices and a quantity. The
-indices can be equity or FX indices. Notice that if notional exchanges are enabled on a leg with Indexings defined, the
+indices can be equity or FX indices. Notice that if notional exchanges are enabled on a leg with \lstinline!Indexings! defined, the
 notional exchanges are {\em not} influenced by the indexing definitions. In general we assume that notional exchanges
 are not enabled in combination with indexings, but it is not forbidden technically. Listing \ref{lst:indexings} shows an
 example of an Floating leg indexed by both an equity price and a FX rate.
@@ -84,21 +84,24 @@ example of an Floating leg indexed by both an equity price and a FX rate.
 The Indexings node contains the following elements:
 
 \begin{itemize}
-\item FromAssetLeg [Optional, defaults to false]: If true and the trade type supports this (e.g. equity swap) the trade
+\item FromAssetLeg [Optional]: If \emph{true} and the trade type supports this (e.g. equity swap) the trade
   builder will add \verb+Indexing+ blocks automatically reflecting the necessary indexings (equity price and FX in the
   case of an equity swap) from the notional reset feature of the asset leg. Also, the Notionals node of the leg will be
   set to a single notional $1$.
+  
+    Allowable values: \emph{true}, \emph{false}. Defaults to \emph{false} if left blank or omitted. 
+  
 \item Indexing [Optional, an arbitrary number can be given]: Each Indexing node describes one indexing as follows:
 
 \begin{itemize}
 
-\item Quantity [Optional, defaults to 1]: The quantity that applies. For equity that should be the number of shares, for
+\item Quantity [Optional]: The quantity that applies. For equity that should be the number of shares, for
   FX it should be 1, i.e. for FX this field can be omitted. The notional of each coupon is
   in general determined as\\
   Original Coupon Notional x Quantity x Equity Price x FX Rate\\
   depending on which indexing types are given. Typically, the original coupon notional will be set to 1.
 
-  Allowable values: any number.
+  Allowable values: Any number. Defaults to \emph{1} if left blank or omitted.
 
 \item Index: The relevant index. This is either an equity or FX index. For an FX index, one of the currencies of the
   index must match the leg currency. It is then ensured that the FX conversion is applied using the correct direction,
@@ -109,31 +112,30 @@ The Indexings node contains the following elements:
   details, or ``EQ-NAME'' for Equity with ``Name'' being the general string representation for equity underlyings
   {IdentifierType}:{Name}:{Currency}:{Exchange}, see \ref{ss:underlying}.
 
-\item IndexFixingDays [Optional, defaults to 0]: fixing days of the index, this is only used for FX indices
+\item IndexFixingDays [Optional]: fixing days of the index, this is only used for FX indices
 
-  Allowable values: non-negative whole number
+  Allowable values: Non-negative whole number. Defaults to \emph{0} if left blank or omitted.
 
-\item IndexFixingCalendar [Optional, defaults to NullCalendar (no holidays)]: fixing calendar of the index, this is only
-  used for FX indices and Bond indices
+\item IndexFixingCalendar [Optional]: Fixing calendar of the index, this is only used for FX indices and Bond indices
 
-  Allowable values: any valid calendar
+  Allowable values: See Table \ref{tab:calendar} Calendar. Defaults to the \emph{NullCalendar} (no holidays) if left blank or omitted.
 
-\item Dirty [Optional, defaults to true]: Only used for bond indices. Indicates whether to use dirty (true) or clean
-  (false) prices.
+\item Dirty [Optional]: Only used for bond indices. Indicates whether to use dirty (\emph{true}) or clean
+  (\emph{false}) prices.
 
-  Allowable values: true, false
+  Allowable values: \emph{true}, \emph{false}. Defaults to \emph{true} if left blank or omitted. 
 
-\item Relative [Optional, defaults to true]: Only used for bond indices. Indicates whether to use relative (true) or
-  absolute prices (false). The absolute price is the dirty or clean npv as of the settlement date of the bond in
+\item Relative [Optional]: Only used for bond indices. Indicates whether to use relative (\emph{true}) or
+  absolute prices (\emph{false}). The absolute price is the dirty or clean npv as of the settlement date of the bond in
   absolute ``dollar'' terms using the bond details (in particular the notional) from the reference data. The relative
   price is the absolute price divided by the current notional as of the settlement date.
 
-  Allowable values: true, false
+  Allowable values: \emph{true}, \emph{false}. Defaults to \emph{true} if left blank or omitted. 
 
-\item ConditionalOnSurvival [Optional, defaults to true]: Only used for bond indices. Indicates whether to forecast bond
-  prices conditional on survival (true) or including the default probability from today until the fixing date (false).
+\item ConditionalOnSurvival [Optional]: Only used for bond indices. Indicates whether to forecast bond
+  prices conditional on survival (\emph{true}) or including the default probability from today until the fixing date (\emph{false}).
 
-  Allowable values: true, false
+  Allowable values: \emph{true}, \emph{false}. Defaults to \emph{true} if left blank or omitted. 
 
 \item InitialFixing [Optional]: If given the index fixing value to apply on the fixing date of the first coupon. If not
   given the value is read from the relevant fixing history.
@@ -146,25 +148,25 @@ The Indexings node contains the following elements:
 
   Allowable values: a valid schedule definition, see \ref{ss:schedule_data}
 
-\item FixingDays [Optional, defaults to 0]: If given defines the number of fixing days to apply when deriving the fixing
+\item FixingDays [Optional]: If given defines the number of fixing days to apply when deriving the fixing
   dates from the valuation schedule (see above).
 
-  Allowable values: any non-negative whole number
+  Allowable values: Any non-negative whole number. Defaults to \emph{0} if left blank or omitted. 
 
 \item FixingCalendar [Optional, defaults to NullCalendar (no holidays): If given defines the fixing calendar to use when
   deriving the fixing dates from the valuation schedule (see above).
 
-  Allowable values: any valid calendar
+  Allowable values:   Allowable values: See Table \ref{tab:calendar} Calendar. Defaults to the \emph{NullCalendar} (no holidays) if left blank or omitted.
 
-\item FixingConvention [Optional, defaults to Preceding]: If given defines the business day convention to use when
-  deriving the fixing dates from the valuation schedule (see above).
+\item FixingConvention [Optional]: If given defines the business day convention to use when
+  deriving the fixing dates from the valuation schedule (see above). Defaults to  \emph{Preceding} if left blank or omitted.
 
-  Allowable values: any valid business day convention (F, MF, P, MP, U)
+  Allowable values: Any valid business day convention, e.g. (\emph{F, MF, P, MP, U}). See \lstinline!Roll Convention! in Table \ref{tab:allow_stand_data}.
 
-\item IsInArrears [Optional, defaults to false]: If true, the fixing dates are derived from the period end dates,
-  otherwise from the period start dates as described for ValuationSchedule above.
+\item IsInArrears [Optional]: If \emph{true}, the fixing dates are derived from the period end dates,
+  otherwise from the period start dates as described for \lstinline!ValuationSchedule! above.
 
-  Allowable values: true, false
+  Allowable values: \emph{true}, \emph{false}. Defaults to \emph{false} if left blank or omitted. 
 
 \end{itemize}
 
