--- a/Docs/UserGuide/tradecomponents/optiondata.tex
+++ b/Docs/UserGuide/tradecomponents/optiondata.tex
@@ -88,7 +88,7 @@ Index CDS Option &  \emph{Call/Put} values are ignored, and the OptionType field
   Note that trade types IR Swaption and CallableSwap can have style
   \emph{European} or \emph{Bermudan}, but not \emph{American}.  
   
-  FX, Equity and commodity options can have styles \emph{European}
+  FX, Equity and Commodity options can have styles \emph{European}
   or \emph{American}, but not \emph{Bermudan}. 
   
   Commodity Swaption and Commodity Average Price Options must have style \emph{European}. 
