new date generation test

--- a/Docs/UserGuide/tradecomponents/scheduledata.tex
+++ b/Docs/UserGuide/tradecomponents/scheduledata.tex
@@ -168,6 +168,18 @@ Allowable values: Boolean node, allowing \emph{Y, N, 1, 0, true, false} etc. The
 \emph{ThirdWednesday}   &   All dates but effective date and
                           termination date are taken to be on the
                           third Wednesday of their month (with forward calculation.) \\ \hline
+\emph{ThirdThursday}   &   All dates but effective date and
+                          termination date are taken to be on the
+                          third Thursday of their month (with forward calculation.) \\ \hline
+\emph{ThirdFriday}   &   All dates but effective date and
+                          termination date are taken to be on the
+                          third Friday of their month (with forward calculation.) \\ \hline
+\emph{MondayAfterThirdFriday}   &   All dates but effective date and
+                          termination date are taken to be on the
+                          Monday following the third Friday of their month (with forward calculation.) \\ \hline
+\emph{TuesdayAfterThirdFriday}   &   All dates but effective date and
+                          termination date are taken to be on the
+                          Tuesday following the third Friday of their month (with forward calculation.) \\ \hline
 \emph{Twentieth}   &   All dates but the effective date are taken to be the twentieth of their month (used for CDS schedules in emerging markets.)  The termination date is also modified. \\ \hline
 \emph{TwentiethIMM}   &   All dates but the effective date are  taken to be the twentieth of an IMM month (used for CDS schedules.)  The termination date is also modified. \\ \hline
 \emph{OldCDS}   &   Same as TwentiethIMM with unrestricted date ends and long/short stub coupon period (old CDS convention).\\ \hline
