--- a/Docs/UserGuide/conventions.tex
+++ b/Docs/UserGuide/conventions.tex
@@ -70,7 +70,7 @@ tenor. If not provided, this defaults to 0.
 \item SpotCalendar [Optional]: The calendar to use for business days when applying the \lstinline!SpotLag!. If not
 provided, it defaults to a calendar with no holidays.
 \item RollConvention [Optional]: The roll convention to use when applying the zero rate tenor. If not provided, it
-defaults to Following (Choices are {\em Backward, Forward, Zero, ThirdWednesday, Twentieth, TwentiethIMM, CDS}).
+defaults to Following (Choices are {\em Backward, Forward, Zero, ThirdWednesday, Twentieth, TwentiethIMM, CDS, ThirdThursday, ThirdFriday, MondayAfterThirdFriday, TuesdayAfterThirdFriday}).
 \item EOM [Optional]: Whether or not to use the end of month convention when applying the zero rate tenor. If not
 provided, it defaults to false.
 \end{itemize}
